# piano-neuronal-

./: .gitignore  Piano-Neuronal_Architecture-Unifiee.md  SPRINT1_STATUS.md  SPRINT2_STATUS.md  pyproject.toml
.claude/: settings.local.json
notebooks/: sprint1_validation.ipynb
piano_neuronal/: config.py
piano_neuronal/s1_data/: audio_loader.py  dataset_parser.py  run_pipeline.py  serialize.py
piano_neuronal/s1_features/: decay.py  excitation.py  extract_all.py  inharmonicity.py  room_ir.py  spectral.py
piano_neuronal/s1_midi/: midi_pairs.py  midi_renderer.py
piano_neuronal/s1_validate/: dataset_report.py  validation.py
piano_neuronal/s2_baseline/: __init__.py  config.py  dataset.py  evaluate.py  loss.py  midi_encoding.py  model.py  run_s2.py  train.py
piano_neuronal/s2_baseline/modules/: __init__.py  context_network.py  core.py  detuner.py  filtered_noise.py  harmonic_oscillator.py  inharm_model.py  inharm_synth.py  monophonic_network.py  note_release.py  parallelizer.py  reverb.py  z_encoder.py
scripts/: download_maestro.py  setup_vast.sh
tests/: test_audio_loader.py  test_features.py  test_parser.py
