[project]
name = "piano-neuronal"
version = "0.1.0"
description = "Neural hybrid piano synthesis engine — Sprint 1 data pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "h5py>=3.10",
    "pretty_midi>=0.2",
    "mido>=1.3",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]